--- a/src/presets/typography/font-family.yml
+++ b/src/presets/typography/font-family.yml
@@ -1,28 +1,21 @@
 # SET FONT FAMILY
 primary:
-  font-family: "'Lato-Regular', sans-serif"
+  font-family: "'OpenSans Regular', sans-serif"
   font-weight: 400;
   font-style: normal;
   font-feature-settings: "'onum', 'kern', 'liga', 'dlig', 'clig'"
   font-kerning: 'normal'
 
 secondary:
-  font-family: "'Lato-Light', sans-serif"
+  font-family: "'OpenSans Light', sans-serif"
   font-weight: 300;
   font-style: normal;
   font-feature-settings: "'onum', 'kern', 'liga', 'dlig', 'clig'"
   font-kerning: 'normal'
 
 tertiary:
-  font-family: Monaco, Menlo, Consolas, "'Courier New', monospace"
-  font-weight: normal;
-  font-style: normal;
-  font-feature-settings: "'onum', 'kern', 'liga', 'dlig', 'clig'"
-  font-kerning: 'normal'
-
-iconFont:
-  font-family: linea-basic-10
-  font-weight: normal;
+  font-family: "'OpenSans SemiBold', sans-serif"
+  font-weight: 600;
   font-style: normal;
   font-feature-settings: "'onum', 'kern', 'liga', 'dlig', 'clig'"
   font-kerning: 'normal'
